--- a/scss/app.scss
+++ b/scss/app.scss
@@ -106,3 +106,4 @@ $dir: ltr;
 @import "layouts/setting/reset-password";
 @import "layouts/setting/garage";
 @import "layouts/setting/orders";
+@import "layouts/setting/payment";
