--- a/scss/layouts/setting/_payment.scss
+++ b/scss/layouts/setting/_payment.scss
@@ -371,6 +371,7 @@
           margin-top: 20px;
           margin-bottom: 20px;
           display: flex;
+          padding: 0px;
           .select-input{
             .css-10nd86i {
               width: 100%;
@@ -422,7 +423,7 @@
           margin-bottom: 20px;
         }
         .card-radio{
-          @include margin-left (25px);
+          @include margin-left (17px);
           margin-bottom: 15px;
           padding: 0px;
           .checkmark{
@@ -432,6 +433,7 @@
         .footer{
           text-align: center;
           margin-bottom: 50px;
+          @include margin-left(-9px);
           width: 100%;
           .btn-light{
             height: auto;
