--- a/scss/layouts/setting/_payment.scss
+++ b/scss/layouts/setting/_payment.scss
@@ -435,10 +435,8 @@
           }
         }
         .footer{
-          text-align: center;
+          @include padding-right(30px);
           margin-bottom: 50px;
-          @include margin-left(-9px);
-          width: 100%;
           .btn-light{
             height: auto;
             background-color: $light-gray;
@@ -446,7 +444,7 @@
             box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
           }
           .btn-primary{
-            @include margin-left(5px);
+            width: 100%;
             border-radius: side-values(0 20px 20px 0) !important;
             height: auto;
             box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
