--- a/scss/layouts/setting/_payment.scss
+++ b/scss/layouts/setting/_payment.scss
@@ -441,13 +441,14 @@
             height: auto;
             background-color: $light-gray;
             border-radius: side-values(0 0 0 20px) !important;
-            box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
+            @extend .box-shadow;
+            width: 100%;
           }
           .btn-primary{
             width: 100%;
             border-radius: side-values(0 20px 20px 0) !important;
             height: auto;
-            box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
+            @extend .box-shadow;  
             text-align: $right;
             text-transform: none;
             i{
