--- a/src/components/Addresses/Addresses.css
+++ b/src/components/Addresses/Addresses.css
@@ -1,4 +1,4 @@
-.Addresses-container {
+/* .Addresses-container {
  display: flex;
  flex-direction: column;
  margin: 5em 0px 0px 6em;
@@ -30,4 +30,4 @@
 
 .Addresses-container .btn-link {
  color: #6c757d;
-}
+} */
