--- a/scss/layouts/setting/_addresses.scss
+++ b/scss/layouts/setting/_addresses.scss
@@ -291,6 +291,9 @@
             display: flex;
             margin-top: 30px;
             margin-bottom: 10px;
+            a{
+              display: flex;
+            }
             img{
               height: 28px;
             }
