fixed the form override issue from the profile page. Added signup image and started working on the icons

--- a/scss/layouts/_products.scss
+++ b/scss/layouts/_products.scss
@@ -8,6 +8,11 @@
 
   > div {
     background: $light-gray;
+    .container-fluid {
+      .row {
+        margin-top: 55px;
+      }
+    }
   }
 
   .tab-content {
