--- a/scss/layouts/authentication/_signup.scss
+++ b/scss/layouts/authentication/_signup.scss
@@ -1,8 +1,14 @@
 #signup {
-  padding-top: 75px;
+  padding-top: 65px;
   background: $light-gray;
   text-align: $left;
 
+  .container-fluid {
+    > .row {
+      margin-top: 46px;
+    }
+  }
+  
   @include small-screen {
     padding-top: 0;
   }
@@ -86,14 +92,9 @@
     > .form-group:first-child {
       margin-#{$right}: 10px;
     }
-    > div:nth-child(2) {
+    > div:first-child {
       .select {
-        border-radius: corner-values(20px 0 0 20px) !important;
-      }
-    }
-    > div:nth-child(3) {
-      .select {
-        border-radius: corner-values(0 0 20px 0) !important;
+        border-radius: corner-values(20px 0 20px 20px) !important;
       }
     }
   }
@@ -176,6 +177,9 @@
   }
   #social-media-info {
     @include font-size(15px);
+    p {
+      margin-bottom: 46px;
+    }
   }
 
   .ReactPasswordStrength {
