--- a/scss/layouts/category/_motor-oil.scss
+++ b/scss/layouts/category/_motor-oil.scss
@@ -15,11 +15,17 @@
     @include small-screen{
         margin-top: -90px;
     }
+    .slick-initialized {
+        margin-top: 56px;
+    }
 }
 
 #oil-top-brands{
     .brand-container{
         padding-bottom: 17px;
+    }
+    > .row {
+        margin-top: 56px;
     }
 }
 
