--- a/scss/modules/_title.scss
+++ b/scss/modules/_title.scss
@@ -1,8 +1,12 @@
 #title {
+  position: relative;
   div {
     p {
       margin-left: 2px;
       color: $light-charcoal-grey;
     }
+  }
+  .d-inline-flex {
+    position: absolute;
   }
 }
