--- a/scss/layouts/authentication/_signup.scss
+++ b/scss/layouts/authentication/_signup.scss
@@ -85,6 +85,7 @@
       background: $white;
       width: 100%;
       height: 55px;
+      @extend .box-shadow;
       .select__control {
         height: 100%;
       }
@@ -203,25 +204,6 @@
       top: 62px;
       #{$right}: 0;
       #{$left}: unset;
-    }
-  }
-  .input-group-append {
-    .password-visibility {
-      display: flex;
-      position: absolute;
-      #{$right}: 20px;
-      bottom: 7px;
-      .icon-show-password {
-        @include font-size(20px);
-      }
-      span {
-        @include padding-left(5px);
-        opacity: 0.8;
-        font-family: Roboto;
-        @include font-size(15px);
-        font-style: normal;
-        color: $charcoal-grey-two;
-      }
     }
   }
   .password-strength {
