added validation for the password score

--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -13,7 +13,7 @@
 }
 
 @mixin padding-left($size){
-  padding-#{$left}: $size;
+  padding-#{$left}: $size !important;
 }
 
 @mixin padding-right($size){
