--- a/scss/layouts/setting/_addresses.scss
+++ b/scss/layouts/setting/_addresses.scss
@@ -49,7 +49,7 @@
   .addresses-box{
     background: $white;
     padding: side-values(10px);
-    padding-bottom: 50px;
+    padding-bottom: 0;
     border-radius: side-values(20px 0 20px 20px) !important;
     label{
       margin-bottom: 0px;
@@ -66,7 +66,7 @@
       }
     }
     .addresses-box_item{
-      margin-bottom: 40px;
+      margin-bottom: 25px;
       .addresses-box_item-label{
         display: flex;
         @include margin-left(20px);
