--- a/scss/layouts/setting/_addresses.scss
+++ b/scss/layouts/setting/_addresses.scss
@@ -315,12 +315,13 @@
             }
           }
           .div-rounded-first{
+            margin-top: 2px;
             .RenderField{
               border: none;
               input{
                 border-radius: side-values(20px 0 0 20px) !important;
                 background: $light-gray;
-                padding: 15px;
+                padding: 12px;
               }
             }
           }
@@ -330,6 +331,10 @@
                 border-radius: side-values(0 0 20px 0) !important;
               }
             }
+          }
+          .div-rounded{
+            @include padding-left(5px);
+            @include padding-right(5px);
           }
           .phone-info{
             margin-top: 25px;
