added a tick to the select input component

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -68,6 +68,7 @@ $dir: ltr;
 @import "modules/dialog";
 @import "modules/social-media";
 @import "modules/renderField";
+@import "modules/selectInput";
 @import "modules/renderFileInput";
 @import "modules/number_picker";
 @import "modules/product_grid_view";
