--- a/scss/layouts/authentication/_signup.scss
+++ b/scss/layouts/authentication/_signup.scss
@@ -201,7 +201,8 @@
 
     .ReactPasswordStrength-strength-desc {
       width: auto;
-      top: 62px;
+      top: 83px;
+      padding: 0;
       #{$right}: 0;
       #{$left}: unset;
     }
