fixed the rest of the signup page style

--- a/scss/layouts/authentication/_signup.scss
+++ b/scss/layouts/authentication/_signup.scss
@@ -119,6 +119,9 @@
         text-align: $right;
       }
     }
+    i {
+      @include padding-left(10px);
+    }
 
     > p {
       @include font-size(15px);
@@ -130,6 +133,9 @@
       }
       span {
         display: block;
+        .btn-link {
+          color: $brand-color;
+        }
       }
     }
   }
