cleaned up all the warning/errors we get in the console

--- a/scss/layouts/_home-details.scss
+++ b/scss/layouts/_home-details.scss
@@ -275,7 +275,7 @@
     color: white;
     @include font-size(25px);
   }
-  p {
+  span {
     color: $basic-white;
     @include font-size(20px);
     margin: 0;
