--- a/scss/layouts/setting/_setting.scss
+++ b/scss/layouts/setting/_setting.scss
@@ -117,18 +117,13 @@
     }
     .list-group{
       .list-group-item{
-        border-left: none;
-        border-right: none;
-      }
-    }
-    .list-group:last-child {
-      .list-group-item:last-child {
-        border-bottom: none;
+        border: none;
+        margin-top: 2px;
       }
     }
     .list-group:first-child {
       .list-group-item:first-child {
-        border-top: none;
+        margin-top: 0px;;
       }
     }
     .list-group-item.active{
