--- a/scss/layouts/_send-request.scss
+++ b/scss/layouts/_send-request.scss
@@ -60,7 +60,7 @@
       width: 50px;
       height: 50px;
     }
-    a {
+    a, span {
       margin: 0px;
       font-family: Roboto;
       font-size: 12px;
